# yadam_creator

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
docs/: changes.md  cli_usage.md  comfy_cloud_playbook.md  handoff_story27_review.md  local_clip_compose_operations.md  manual_browser_flow_workflow.md  manual_browser_gemini_workflow.md  requirements.md  tagged_commits.md
docs_user/: codex_rework_instructions.md  make_vrew_스킬_참조.txt  scene_prompt_audit.md  story15_scene_prompt_rewrite_report.md  목소리_리스트.txt
prompts/: make_story.txt  make_synopsis.txt
reference/: reference.vrew  reference_소녀_레다_목소리.vrew  reference_소년_폼비_목소리.vrew  reference_자비왕후_목소리.vrew  reference_확대.vrew
scripts/: check_voyager_extension.py  comfy_cloud_charsheet_workflow.py  comfy_cloud_place_refs_workflow.py  inpaint_rect.py  make_contact_sheet.py  playwright_gemini_card_pair_download.py  playwright_gemini_cdp_batch.py  playwright_gemini_cdp_one_shot.py  playwright_gemini_download_latest.py  playwright_gemini_feed_walk_download.py  playwright_gemini_one_shot.py  playwright_gemini_reset_chat.py  playwright_gemini_state_probe.py  run_pipeline.py  story16_watermark_aggressive_final.py  story16_watermark_apply_clicked_coords.py  story16_watermark_boost_on_residuals.py  story16_watermark_click_label.py  story16_watermark_finish_pass.py  story16_watermark_framewise_exact.py  story16_watermark_manual_coords_apply.py  story16_watermark_manual_coords_refine.py  story16_watermark_manual_pass.py  story16_watermark_patch_replace.py  story16_watermark_residual_cleanup.py  (+2 more)
stories/: story00.txt
(+91 files in other folders)
